yup its running correctly, yeahhh!!

--- a/final.ipynb
+++ b/final.ipynb
@@ -111,7 +111,7 @@
       "metadata": {
         "id": "LLdnAS6ETnmi",
         "colab_type": "code",
-        "outputId": "cf6ed47b-e4d3-47af-e7cf-4ac6621a0730",
+        "outputId": "3c730d6d-3ef9-45e8-c18e-7faa0160fd72",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 202
@@ -120,21 +120,21 @@
       "source": [
         "!wget --header=\"Host: www.cityscapes-dataset.com\" --header=\"User-Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/78.0.3904.97 Safari/537.36\" --header=\"Accept: text/html,application/xhtml+xml,application/xml;q=0.9,image/webp,image/apng,*/*;q=0.8,application/signed-exchange;v=b3\" --header=\"Accept-Language: en-GB,en-US;q=0.9,en;q=0.8\" --header=\"Referer: https://www.cityscapes-dataset.com/downloads/\" --header=\"Cookie: PHPSESSID=4f0gk1d5hbc0ikttngvpm8ff52\" --header=\"Connection: keep-alive\" \"https://www.cityscapes-dataset.com/file-handling/?packageID=4\" -O \"leftImg8bit_trainextra.zip\" -c"
       ],
-      "execution_count": 0,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "--2019-11-20 10:09:30--  https://www.cityscapes-dataset.com/file-handling/?packageID=4\n",
+            "--2019-11-20 22:13:22--  https://www.cityscapes-dataset.com/file-handling/?packageID=4\n",
             "Resolving www.cityscapes-dataset.com (www.cityscapes-dataset.com)... 139.19.217.8\n",
             "Connecting to www.cityscapes-dataset.com (www.cityscapes-dataset.com)|139.19.217.8|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 47230218747 (44G) [application/octet-stream]\n",
             "Saving to: ‘leftImg8bit_trainextra.zip’\n",
             "\n",
-            "leftImg8bit_trainex 100%[===================>]  43.99G  69.1MB/s    in 11m 27s \n",
+            "leftImg8bit_trainex 100%[===================>]  43.99G  98.2MB/s    in 7m 26s  \n",
             "\n",
-            "2019-11-20 10:21:03 (65.6 MB/s) - ‘leftImg8bit_trainextra.zip’ saved [47230218747/47230218747]\n",
+            "2019-11-20 22:20:53 (101 MB/s) - ‘leftImg8bit_trainextra.zip’ saved [47230218747/47230218747]\n",
             "\n"
           ],
           "name": "stdout"
@@ -567,6 +567,8 @@
         "      layers = batch.shape[1]\n",
         "      dim1 = batch.shape[2]\n",
         "      dim2 = batch.shape[3]\n",
+        "      #print(layers, dim1,dim2,bs)\n",
+        "      #print(q_w.shape)\n",
         "      output = torch.bmm(batch.view(bs*layers,dim1,dim2), q_w.view(bs*layers,dim1,dim2))\n",
         "      return output.view(bs,layers,dim1,dim2)\n",
         "\n",
@@ -625,7 +627,11 @@
       "metadata": {
         "id": "sFa4dkniuO4D",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 70
+        },
+        "outputId": "7346a6c7-7260-4706-f9bd-a9adb2afd2a1"
       },
       "source": [
         "\n",
@@ -637,8 +643,17 @@
         "\n",
         "MHA= MultiHeadAttention(batch_size, heads, d_model, dim1, dim2, dropout = 0.4)\n"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Downloading: \"https://download.pytorch.org/models/resnet50-19c8e357.pth\" to D:\\dev\\Pytorch_Models\\models\\resnet/checkpoints/resnet50-19c8e357.pth\n",
+            "100%|██████████| 97.8M/97.8M [00:00<00:00, 172MB/s]\n"
+          ],
+          "name": "stderr"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -659,7 +674,7 @@
       "metadata": {
         "id": "4BsfTOGr_Tk7",
         "colab_type": "code",
-        "outputId": "dcf145db-01b9-4e64-9ae5-70d41c600435",
+        "outputId": "315d6b6b-9879-481b-cb8d-f1f5cfd039fc",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -668,7 +683,7 @@
       "source": [
         "output.shape"
       ],
-      "execution_count": 26,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -680,7 +695,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 26
+          "execution_count": 22
         }
       ]
     },
@@ -735,8 +750,10 @@
         "\n",
         "    def forward(self, batch, img=None):\n",
         "        x_list = []\n",
-        "\n",
-        "        x_first = self.sub_generators[0](batch[0])\n",
+        "        #print(batch[0].shape)\n",
+        "        dim2 = dim1 = batch[0].shape[-1]\n",
+        "        self.MHA= MultiHeadAttention(self.bs, self.h, self.d_model,  dim1,  dim2, self.dropout )\n",
+        "        x_first = self.sub_generators[0](self.MHA(batch[0]))\n",
         "        #print(x_first.size())\n",
         "        x_list.append(x_first)\n",
         "\n",
@@ -750,8 +767,10 @@
         "            #print(x_inter.size())\n",
         "            x_prev = x_inter\n",
         "            x_inter = F.pad(x_inter, [5, 5, 5, 5], value=0)\n",
-        "            print(self.current_scale)\n",
-        "            x_inter = x_inter + batch[i]\n",
+        "            #print(self.current_scale)\n",
+        "            dim2 = dim1 = batch[i].shape[-1]\n",
+        "            self.MHA= MultiHeadAttention(self.bs, self.h, self.d_model,  dim1,  dim2, self.dropout )\n",
+        "            x_inter = x_inter + self.MHA(batch[i])\n",
         "            x_inter = self.sub_generators[i](x_inter) + x_prev\n",
         "            x_list.append(x_inter)\n",
         "        #print(self.size_list)\n",
@@ -982,11 +1001,18 @@
         "                    nrow=1, normalize=True)\n",
         "   \"\"\"\n",
         "  x_in_list = []\n",
+        "\n",
         "  for xidx in range(0, stage + 1):\n",
         "      x_tmp = F.interpolate(x_org, (args.size_list[xidx], args.size_list[xidx]), mode='bilinear', align_corners=True)\n",
         "      x_tmp = F.pad(x_tmp, [5, 5, 5, 5], value=0)\n",
         "      x_in_list.append(x_tmp)\n",
-        "   \n",
+        "  \n",
+        "  x_in_list_nopad = []\n",
+        "  \n",
+        "  for xidx in range(0, stage + 1):\n",
+        "      x_tmp = F.interpolate(x_org, (args.size_list[xidx], args.size_list[xidx]), mode='bilinear', align_corners=True)\n",
+        "      \n",
+        "      x_in_list_nopad.append(x_tmp)\n",
         "  z_rec = F.pad(x_in, [5, 5, 5, 5], value=0)\n",
         "  for i in t_train:\n",
         "      if i == decay_lr:\n",
@@ -1007,7 +1033,7 @@
         "          # calculate rmse for each scale\n",
         "          rmse_list = [1.0]\n",
         "          for rmseidx in range(1, stage + 1):\n",
-        "              rmse = torch.sqrt(F.mse_loss(x_rec_list[rmseidx], x_in_list[rmseidx]))\n",
+        "              rmse = torch.sqrt(F.mse_loss(x_rec_list[rmseidx], x_in_list_nopad[rmseidx]))\n",
         "              rmse_list.append(rmse)\n",
         "\n",
         "          z_list = [F.pad(rmse_list[z_idx] * torch.randn(args.batch_size, 3, args.size_list[z_idx],\n",
@@ -1398,7 +1424,7 @@
       "metadata": {
         "id": "lVNqY1SMg17e",
         "colab_type": "code",
-        "outputId": "0113f7ac-597a-4c6c-d0f9-5c8bb2a95275",
+        "outputId": "5e2802ae-a7c6-4c44-f2b4-ab3284e7e95d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
@@ -1471,7 +1497,7 @@
         "    main_worker(args.gpu, ngpus_per_node, args)\n",
         "\n"
       ],
-      "execution_count": 108,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1488,8 +1514,8 @@
             "Batch Size:                             2                                       \n",
             "Max image Size:                         224                                     \n",
             "Min image Size:                         28                                      \n",
-            "Log DIR:                                ./logs/SinGan_2019-11-20_22-07-48       \n",
-            "Result DIR:                             ./results/SinGan_2019-11-20_22-07-48    \n",
+            "Log DIR:                                ./logs/SinGan_2019-11-20_23-06-49       \n",
+            "Result DIR:                             ./results/SinGan_2019-11-20_23-06-49    \n",
             "GAN TYPE:                               zerogp                                  \n",
             "Use GPU: 0 for training\n",
             "[28, 37, 49, 66, 88, 117, 157, 209]\n"
@@ -1508,6 +1534,7 @@
             "\n",
             "\n",
             "\n",
+            "  0%|          | 0/20 [00:00<?, ?it/s]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\n",
             "\n",
             "\n",
             "\n",
@@ -1516,6 +1543,7 @@
             "\n",
             "\n",
             "\n",
+            "Stage: [0/7] Avg Loss: D[1.411] G[19.389] RMSE[1.000]:   0%|          | 0/20 [00:09<?, ?it/s]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\n",
             "\n",
             "\n",
             "\n",
@@ -1524,6 +1552,7 @@
             "\n",
             "\n",
             "\n",
+            "Stage: [0/7] Avg Loss: D[1.411] G[19.389] RMSE[1.000]:   5%|▌         | 1/20 [00:09<02:58,  9.40s/it]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\n",
             "\n",
             "\n",
             "\n",
@@ -1532,24 +1561,87 @@
             "\n",
             "\n",
             "\n",
+            "Stage: [0/7] Avg Loss: D[1.384] G[15.265] RMSE[1.000]:   5%|▌         | 1/20 [00:16<02:58,  9.40s/it]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\n",
             "\n",
-            "  0%|          | 0/20 [00:00<?, ?it/s]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A"
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "Stage: [0/7] Avg Loss: D[1.384] G[15.265] RMSE[1.000]:  10%|█         | 2/20 [00:16<02:34,  8.57s/it]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "Stage: [0/7] Avg Loss: D[1.358] G[12.891] RMSE[1.000]:  10%|█         | 2/20 [00:22<02:34,  8.57s/it]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "Stage: [0/7] Avg Loss: D[1.358] G[12.891] RMSE[1.000]:  15%|█▌        | 3/20 [00:22<02:16,  8.00s/it]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "Stage: [0/7] Avg Loss: D[1.335] G[11.394] RMSE[1.000]:  15%|█▌        | 3/20 [00:29<02:16,  8.00s/it]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "Stage: [0/7] Avg Loss: D[1.335] G[11.394] RMSE[1.000]:  20%|██        | 4/20 [00:29<02:01,  7.58s/it]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A"
           ],
           "name": "stderr"
         },
         {
-          "output_type": "error",
-          "ename": "TypeError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-108-dbb6e2f1e7b4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     62\u001b[0m     \u001b[0mmp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mspawn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmain_worker\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnprocs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mngpus_per_node\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0margs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mngpus_per_node\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0margs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     63\u001b[0m \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 64\u001b[0;31m     \u001b[0mmain_worker\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgpu\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mngpus_per_node\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0margs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     65\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m<ipython-input-99-642981bd2c18>\u001b[0m in \u001b[0;36mmain_worker\u001b[0;34m(gpu, ngpus_per_node, args)\u001b[0m\n\u001b[1;32m    156\u001b[0m             \u001b[0mtrain_sampler\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset_epoch\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstage\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    157\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 158\u001b[0;31m         \u001b[0mtrainSinGAN\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_loader\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnetworks\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m\"d_opt\"\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0md_opt\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"g_opt\"\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mg_opt\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstage\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m\"z_rec\"\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mz_fix_list\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    159\u001b[0m        \u001b[0;31m# validateSinGAN(train_loader, networks, stage, args, {\"z_rec\": z_fix_list})\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    160\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m<ipython-input-107-05544d04a51f>\u001b[0m in \u001b[0;36mtrainSinGAN\u001b[0;34m(data_loader, networks, opts, stage, args, additional)\u001b[0m\n\u001b[1;32m     89\u001b[0m           \u001b[0;31m#print(len(x_fake_list[-1]))\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     90\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 91\u001b[0;31m           \u001b[0mg_fake_logit\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mD\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mx_fake_list\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     92\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     93\u001b[0m           \u001b[0mones\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mones_like\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mg_fake_logit\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcuda\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgpu\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/torch/nn/modules/module.py\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(self, *input, **kwargs)\u001b[0m\n\u001b[1;32m    539\u001b[0m             \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_slow_forward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    540\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 541\u001b[0;31m             \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mforward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    542\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mhook\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_forward_hooks\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    543\u001b[0m             \u001b[0mhook_result\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mhook\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mresult\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mTypeError\u001b[0m: forward() takes 2 positional arguments but 3 were given"
-          ]
+          "output_type": "stream",
+          "text": [
+            "DISCRIMINATOR LEARNING RATE UPDATE TO : 5e-05\n",
+            "GENERATOR LEARNING RATE UPDATE TO : 5e-05\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "Stage: [0/7] Avg Loss: D[1.313] G[10.463] RMSE[1.000]:  20%|██        | 4/20 [00:35<02:01,  7.58s/it]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "Stage: [0/7] Avg Loss: D[1.313] G[10.463] RMSE[1.000]:  25%|██▌       | 5/20 [00:35<01:48,  7.24s/it]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A"
+          ],
+          "name": "stderr"
         }
       ]
     },
