need way bigger gpu, go back

--- a/final.ipynb
+++ b/final.ipynb
@@ -753,8 +753,9 @@
         "        #print(batch[0].shape)\n",
         "        dim2 = dim1 = batch[0].shape[-1]\n",
         "        self.MHA= MultiHeadAttention(self.bs, self.h, self.d_model,  dim1,  dim2, self.dropout )\n",
-        "        x_first = self.sub_generators[0](self.MHA(batch[0]))\n",
+        "        #x_first = self.sub_generators[0](self.MHA(batch[0]))\n",
         "        #print(x_first.size())\n",
+        "        x_first = self.sub_generators[0](batch[0])\n",
         "        x_list.append(x_first)\n",
         "\n",
         "        if img is not None:\n",
@@ -769,8 +770,11 @@
         "            x_inter = F.pad(x_inter, [5, 5, 5, 5], value=0)\n",
         "            #print(self.current_scale)\n",
         "            dim2 = dim1 = batch[i].shape[-1]\n",
+        "            \"\"\"\n",
         "            self.MHA= MultiHeadAttention(self.bs, self.h, self.d_model,  dim1,  dim2, self.dropout )\n",
         "            x_inter = x_inter + self.MHA(batch[i])\n",
+        "            \"\"\"\n",
+        "            x_inter = x_inter + (batch[i])\n",
         "            x_inter = self.sub_generators[i](x_inter) + x_prev\n",
         "            x_list.append(x_inter)\n",
         "        #print(self.size_list)\n",
@@ -1424,7 +1428,7 @@
       "metadata": {
         "id": "lVNqY1SMg17e",
         "colab_type": "code",
-        "outputId": "5e2802ae-a7c6-4c44-f2b4-ab3284e7e95d",
+        "outputId": "5b2c9f22-6e26-42f5-c4a5-99a5421cb72b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
@@ -1514,8 +1518,8 @@
             "Batch Size:                             2                                       \n",
             "Max image Size:                         224                                     \n",
             "Min image Size:                         28                                      \n",
-            "Log DIR:                                ./logs/SinGan_2019-11-20_23-06-49       \n",
-            "Result DIR:                             ./results/SinGan_2019-11-20_23-06-49    \n",
+            "Log DIR:                                ./logs/SinGan_2019-11-20_23-14-53       \n",
+            "Result DIR:                             ./results/SinGan_2019-11-20_23-14-53    \n",
             "GAN TYPE:                               zerogp                                  \n",
             "Use GPU: 0 for training\n",
             "[28, 37, 49, 66, 88, 117, 157, 209]\n"
@@ -1534,8 +1538,8 @@
             "\n",
             "\n",
             "\n",
-            "  0%|          | 0/20 [00:00<?, ?it/s]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\n",
             "\n",
+            "  0%|          | 0/20 [00:00<?, ?it/s]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\n",
             "\n",
             "\n",
             "\n",
@@ -1543,52 +1547,51 @@
             "\n",
             "\n",
             "\n",
-            "Stage: [0/7] Avg Loss: D[1.411] G[19.389] RMSE[1.000]:   0%|          | 0/20 [00:09<?, ?it/s]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\n",
             "\n",
             "\n",
+            "Stage: [0/7] Avg Loss: D[1.467] G[14.403] RMSE[1.000]:   0%|          | 0/20 [00:08<?, ?it/s]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\n",
             "\n",
             "\n",
             "\n",
             "\n",
             "\n",
             "\n",
-            "Stage: [0/7] Avg Loss: D[1.411] G[19.389] RMSE[1.000]:   5%|▌         | 1/20 [00:09<02:58,  9.40s/it]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\n",
             "\n",
             "\n",
             "\n",
+            "Stage: [0/7] Avg Loss: D[1.467] G[14.403] RMSE[1.000]:   5%|▌         | 1/20 [00:08<02:37,  8.28s/it]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\n",
             "\n",
             "\n",
             "\n",
             "\n",
             "\n",
-            "Stage: [0/7] Avg Loss: D[1.384] G[15.265] RMSE[1.000]:   5%|▌         | 1/20 [00:16<02:58,  9.40s/it]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\n",
             "\n",
             "\n",
             "\n",
             "\n",
+            "Stage: [0/7] Avg Loss: D[1.432] G[9.545] RMSE[1.000]:   5%|▌         | 1/20 [00:13<02:37,  8.28s/it] \u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\n",
             "\n",
             "\n",
             "\n",
             "\n",
-            "Stage: [0/7] Avg Loss: D[1.384] G[15.265] RMSE[1.000]:  10%|█         | 2/20 [00:16<02:34,  8.57s/it]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\n",
             "\n",
             "\n",
             "\n",
             "\n",
             "\n",
+            "Stage: [0/7] Avg Loss: D[1.432] G[9.545] RMSE[1.000]:  10%|█         | 2/20 [00:13<02:13,  7.44s/it]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\n",
             "\n",
             "\n",
             "\n",
-            "Stage: [0/7] Avg Loss: D[1.358] G[12.891] RMSE[1.000]:  10%|█         | 2/20 [00:22<02:34,  8.57s/it]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\n",
             "\n",
             "\n",
             "\n",
             "\n",
             "\n",
             "\n",
+            "Stage: [0/7] Avg Loss: D[1.405] G[7.190] RMSE[1.000]:  10%|█         | 2/20 [00:19<02:13,  7.44s/it]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\n",
             "\n",
             "\n",
-            "Stage: [0/7] Avg Loss: D[1.358] G[12.891] RMSE[1.000]:  15%|█▌        | 3/20 [00:22<02:16,  8.00s/it]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\n",
             "\n",
             "\n",
             "\n",
@@ -1596,8 +1599,8 @@
             "\n",
             "\n",
             "\n",
+            "Stage: [0/7] Avg Loss: D[1.405] G[7.190] RMSE[1.000]:  15%|█▌        | 3/20 [00:19<01:56,  6.85s/it]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\n",
             "\n",
-            "Stage: [0/7] Avg Loss: D[1.335] G[11.394] RMSE[1.000]:  15%|█▌        | 3/20 [00:29<02:16,  8.00s/it]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\n",
             "\n",
             "\n",
             "\n",
@@ -1606,7 +1609,17 @@
             "\n",
             "\n",
             "\n",
-            "Stage: [0/7] Avg Loss: D[1.335] G[11.394] RMSE[1.000]:  20%|██        | 4/20 [00:29<02:01,  7.58s/it]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A"
+            "Stage: [0/7] Avg Loss: D[1.381] G[5.874] RMSE[1.000]:  15%|█▌        | 3/20 [00:25<01:56,  6.85s/it]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "Stage: [0/7] Avg Loss: D[1.381] G[5.874] RMSE[1.000]:  20%|██        | 4/20 [00:25<01:44,  6.54s/it]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A"
           ],
           "name": "stderr"
         },
@@ -1630,7 +1643,8 @@
             "\n",
             "\n",
             "\n",
-            "Stage: [0/7] Avg Loss: D[1.313] G[10.463] RMSE[1.000]:  20%|██        | 4/20 [00:35<02:01,  7.58s/it]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\n",
+            "\n",
+            "Stage: [0/7] Avg Loss: D[1.358] G[5.051] RMSE[1.000]:  20%|██        | 4/20 [00:30<01:44,  6.54s/it]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\n",
             "\n",
             "\n",
             "\n",
@@ -1639,7 +1653,168 @@
             "\n",
             "\n",
             "\n",
-            "Stage: [0/7] Avg Loss: D[1.313] G[10.463] RMSE[1.000]:  25%|██▌       | 5/20 [00:35<01:48,  7.24s/it]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A"
+            "\n",
+            "Stage: [0/7] Avg Loss: D[1.358] G[5.051] RMSE[1.000]:  25%|██▌       | 5/20 [00:30<01:34,  6.29s/it]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "Stage: [0/7] Avg Loss: D[1.343] G[4.498] RMSE[1.000]:  25%|██▌       | 5/20 [00:36<01:34,  6.29s/it]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "Stage: [0/7] Avg Loss: D[1.343] G[4.498] RMSE[1.000]:  30%|███       | 6/20 [00:36<01:24,  6.04s/it]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "Stage: [0/7] Avg Loss: D[1.331] G[4.101] RMSE[1.000]:  30%|███       | 6/20 [00:42<01:24,  6.04s/it]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "Stage: [0/7] Avg Loss: D[1.331] G[4.101] RMSE[1.000]:  35%|███▌      | 7/20 [00:42<01:19,  6.09s/it]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "Stage: [0/7] Avg Loss: D[1.322] G[3.800] RMSE[1.000]:  35%|███▌      | 7/20 [00:47<01:19,  6.09s/it]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "Stage: [0/7] Avg Loss: D[1.322] G[3.800] RMSE[1.000]:  40%|████      | 8/20 [00:47<01:11,  5.93s/it]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "Stage: [0/7] Avg Loss: D[1.314] G[3.564] RMSE[1.000]:  40%|████      | 8/20 [00:53<01:11,  5.93s/it]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "Stage: [0/7] Avg Loss: D[1.314] G[3.564] RMSE[1.000]:  45%|████▌     | 9/20 [00:53<01:03,  5.80s/it]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "Stage: [0/7] Avg Loss: D[1.308] G[3.373] RMSE[1.000]:  45%|████▌     | 9/20 [00:58<01:03,  5.80s/it]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "Stage: [0/7] Avg Loss: D[1.308] G[3.373] RMSE[1.000]:  50%|█████     | 10/20 [00:58<00:56,  5.69s/it]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "Stage: [0/7] Avg Loss: D[1.302] G[3.215] RMSE[1.000]:  50%|█████     | 10/20 [01:04<00:56,  5.69s/it]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "Stage: [0/7] Avg Loss: D[1.302] G[3.215] RMSE[1.000]:  55%|█████▌    | 11/20 [01:04<00:50,  5.63s/it]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "Stage: [0/7] Avg Loss: D[1.296] G[3.082] RMSE[1.000]:  55%|█████▌    | 11/20 [01:09<00:50,  5.63s/it]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "Stage: [0/7] Avg Loss: D[1.296] G[3.082] RMSE[1.000]:  60%|██████    | 12/20 [01:09<00:44,  5.59s/it]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "Stage: [0/7] Avg Loss: D[1.291] G[2.968] RMSE[1.000]:  60%|██████    | 12/20 [01:15<00:44,  5.59s/it]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "Stage: [0/7] Avg Loss: D[1.291] G[2.968] RMSE[1.000]:  65%|██████▌   | 13/20 [01:15<00:39,  5.61s/it]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A"
           ],
           "name": "stderr"
         }
